# bigquery-mcp

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  accessible_tables.yaml  main.py  pyproject.toml
.claude/skills/: add-use-case.md  run-query.md
use_cases/: marketing_channel_daily_performance.yaml
